--- a/Assignment2.css
+++ b/Assignment2.css
@@ -2,3 +2,5 @@ html,body{background-color: blanchedalmond;}
 h1{font-family: 'Oswald', serif;}
 
 h2{color: rgb(103, 114, 107);font-family: 'Ubuntu', sans-serif;}
+#Bubble{font-family: 'Ubuntu', sans-serif;}
+#Scatter{font-family: 'Ubuntu', sans-serif;}
