--- a/Assignment2.css
+++ b/Assignment2.css
@@ -1,6 +1,57 @@
 html,body{background-color: blanchedalmond;}
-h1{font-family: 'Oswald', serif;}
+.page {
+    width: 850px;
+    background-color: white;
+    margin: auto;
+    padding: 50px;
+    padding-top: 35px;
+}
+.header {
+    width: 850px;
+    background-color: rgb(219, 181, 123);
+    margin: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    
+}
+.footer {
+    width: 850px;
+    background-color: rgb(88, 88, 88);
+    margin: auto;
+    padding: 50px;
+    padding-top: 35px;
+}
+#header1{
 
-h2{color: rgb(103, 114, 107);font-family: 'Ubuntu', sans-serif;}
-#Bubble{font-family: 'Ubuntu', sans-serif;}
-#Scatter{font-family: 'Ubuntu', sans-serif;}
+    padding-top:12px;
+    font-size: 20px;
+}
+#header2{
+    text-align: right;
+    font-size: 17px;
+    padding-top:15px;
+    color: rgb(88, 88, 88);
+}
+
+h1{font-family: 'Oswald', serif;text-align: center;padding-top:20px;}
+#popu{margin-bottom: 50px;padding-right: 135px;padding-left: 135px;text-align: center;}
+hr{margin:20px;}
+h3{font-family: 'Oswald', serif;}
+p{font-size: 16px;}
+#fit{font-family: 'Oswald', serif;color: rgb(53, 52, 52);font-size: 20px;}
+h2{color: rgb(128, 72, 26);font-family: 'Ubuntu', sans-serif;}
+#Choro{width: 100%;}
+#Scatter{font-family: 'Ubuntu', sans-serif;margin-top: 25px;}
+#Bubble{font-family: 'Ubuntu', sans-serif;width: auto;}
+
+#top5text{margin-top: 0px;}
+#bodylink{color: black;}
+
+.footertext{
+    text-align: left;
+    font-family: 'Oswald', serif;
+    color: blanchedalmond;
+}
+a{color: white;}
